--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@ body {
   box-sizing: border-box;
 }
 
+.body-wrapper {
+  min-height: 100vh;
+  /* padding-bottom: 600px; */
+}
+
 h2 {
   color: #000;
   font-size: 3rem;
@@ -84,7 +89,7 @@ a{
   border-radius: 1.875rem;
   border: none;
 }
-.pageButton:hover, input.contactUsBtn:hover{
+.pageButton:hover, input.contactUsBtn:hover, form.seoform input[type="submit"]:hover{
   box-shadow: 0px 0px 10px #a38dd2;
 }
 
@@ -110,7 +115,7 @@ a.header-btn:hover {
   color: #fff !important;
   font-size: 1.25rem;
 }
-.dropdown-item:hover{
+.dropdown-item:hover, .dropdown-item:active, .dropdown-item.active{
   background-color: var(--purple);
 }
 
@@ -188,6 +193,79 @@ ul.dropdown-menu{
 
 }
 
+/*SEO Form*/
+form.seoform {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column; 
+  padding: 4rem 3rem;
+  border-radius: 2.32981rem;
+  /* margin-bottom: 5rem;
+  margin-top: 2rem; */
+}
+form.seoform input {
+  padding: 1rem 2rem;
+  margin: 1rem 0;
+  border: none;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.12);
+  border-radius: 1.51438rem;
+}
+form.seoform input[type="submit"] {
+  background-color: #A38DD2;
+  font-size: 1.55319rem;
+  color: #fff;
+}
+form.seoform p{
+  font-size: 1.24256rem;
+}
+.seoformText .t1 {
+  font-size: 3.5rem;
+  line-height: 6.25rem;
+  font-weight: 300;
+}
+.seoformText .t2 {
+  font-size: 4rem;
+  line-height: 4.25rem;
+  font-weight: 600;
+}
+.seoformText p.t3 {
+  font-size: 2rem;
+  line-height: 2.52rem;
+  margin: 2rem 0;
+}
+
+/*prple BG*/
+.cardBg {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(9, 0, 30, 0.90);
+  color: #fff;
+}
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(9, 0, 30, 0.90);
+  color: #fff;
+  padding: 5rem 2rem;
+}
+.overlay .t1 {
+  font-size: 2.5rem;
+}
+.overlay a.t3 {
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 500;
+  border: 1px solid #fff;
+  border-radius: 0.375rem;
+  padding: 0.3rem 1rem;
+}
 
 /*Client Section*/
 .clientSection h2 {
@@ -213,11 +291,11 @@ ul.dropdown-menu{
 }
 
 /*why us home page*/
-.whyuscard img {
+/* .whyuscard img {
   padding: 1rem;
   background-color: #F9F9F9;
   border-radius: 50%;
-}
+} */
 
 .whyuscard {
   padding: 0 2.5rem 3rem;
@@ -346,9 +424,53 @@ p.genralsliderPara {
 .checkbox-option input[type="checkbox"]:checked {
   background: #000;
 }
+
+/*Slider CSS*/
+
+.slider {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  max-width: 1360px;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 8%;
+}
+
+.slide {
+  width: 400px;
+  display: none;
+}
+
+.slide img{
+  width: 380px;
+  height: 500px;
+  object-fit: cover;
+  object-position: center;
+  margin: 10px;
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  font-size: 35px;
+  background-color: #ffffff9c;
+  cursor: pointer;
+  padding: 8px;
+}
+.icon.next {
+  right: 13px;
+}
+.icon.prev {
+  left: 13px;
+}
 /*Footer*/
 footer{
   background: var(--bg-color);
+  /* position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index: -1; */
 }
 footer p {
   line-height: 1.75rem;
@@ -388,6 +510,19 @@ footer form button {
   border: none;
   background-color: #fff;
 }
+
+/*Mega Menu*/
+
+li.nav-item.dropdown{
+  position: static;
+}
+.navbar-expand-lg .navbar-nav .dropdown-menu{
+  max-height: 500px;
+    overflow-y: scroll;
+}
+.dropdown-menu ul {
+  list-style: none;
+}
 /**********************************************Responsive CSS************************************************/
 
 @media (min-width : 480px) {
@@ -400,6 +535,10 @@ footer form button {
     font-size: 3rem;
     line-height: 3.8rem;
   }
+  .seoformText .t2 {
+    font-size: 5.5rem;
+    line-height: 6.25rem;
+}
 }
 
 @media (min-width: 768px) {
@@ -439,6 +578,11 @@ footer form button {
     font-weight: 600;
     line-height: 6.25rem;
   }
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+}
 }
 
 @media (min-width: 1200px){
