--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@
   --subheading-font-color: #4F4F4F;
   --purple: #A38DD2;
   --primary-font-color: #1D2130;
+  --size-one : 1rem;
+  --size-two : 1.5rem;
+  --size-three : 2rem;
+  --size-four : 2.5rem;
+  --size-five : 3rem;
+  --size-six : 4rem;
+  --size-seven : 3.5rem;
+  --size-eight : 4.5rem;
+  --size-nine : 5rem;
 
 }
 
@@ -37,7 +46,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: var(--size-three);
   line-height: 2.8rem;
   color: #000;
   font-weight: 600;
@@ -58,9 +67,9 @@ h6 {
 }
 
 p, li {
-  font-size: 1.5rem;
+  font-size: var(--size-one);
   color: var(--primary-font-color);
-  line-height: 2.25rem;
+  line-height: var(--size-two);
   margin: 0;
 }
 a{
@@ -69,13 +78,14 @@ a{
 }
 
 .mainHeading {
-  font-size: 2rem;
+  font-size: var(--size-three);
   line-height: 2.8rem;
   font-weight: 600;
 }
 
 .cardParagraph, .shdwcardwrm ul li {
-  font-size: 1.3rem;
+  font-size: var(--size-one);
+  line-height: var(--size-two);
   color: var(--primary-font-color);
   margin: 0;
 }
@@ -102,7 +112,7 @@ header {
 }
 
 header li.nav-item {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
 }
 a.header-btn:hover {
   box-shadow: 0px 0px 17px #d8ade1;
@@ -130,12 +140,12 @@ ul.dropdown-menu{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 10rem 0 2rem;
+  padding: 4rem 0 2rem;
 }
 
 .sliderSubheading {
   color: var(--subheading-font-color);
-  font-size: 2rem;
+  font-size: var(--size-three);
 }
 
 .sliderHeading {
@@ -149,7 +159,7 @@ ul.dropdown-menu{
 
 .sliderButton {
   color: #fff;
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   padding: 1rem 2.5rem;
   background-color: var(--purple);
   border: none;
@@ -188,7 +198,7 @@ ul.dropdown-menu{
 
 .homeCardSectionTwo a {
   color: var(--purple) !important;
-  font-size: 1.25rem;
+  font-size: var(--size-one);
   font-weight: 500;
 
 }
@@ -229,7 +239,7 @@ form.seoform p{
   font-weight: 600;
 }
 .seoformText p.t3 {
-  font-size: 2rem;
+  font-size: var(--size-three);
   line-height: 2.52rem;
   margin: 2rem 0;
 }
@@ -269,7 +279,7 @@ form.seoform p{
 
 /*Client Section*/
 .clientSection h2 {
-  font-size: 2rem;
+  font-size: var(--size-three);
   font-weight: 400;
 }
 
@@ -286,7 +296,7 @@ form.seoform p{
 
 .shdwcardwrm a, .cardpurpledot a {
   color: var(--purple) !important;
-  font-size: 1.25rem;
+  font-size: var(--size-one);
   font-weight: 500;
 }
 
@@ -313,7 +323,7 @@ form.seoform p{
 /*Genral Slider*/
 
 .genralSlider {
-  padding: 11rem 0 14rem;
+  padding: 4rem 0;
   background-size: auto;
     background-repeat: no-repeat;
     background-position: 100% 0%;
@@ -328,6 +338,7 @@ form.seoform p{
 
 p.genralsliderPara {
   font-size: 1.75rem;
+  line-height: 2.3rem;
   padding: 0rem 0 3rem;
 }
 
@@ -351,7 +362,7 @@ p.genralsliderPara {
   line-height: 1.7rem;
 }
 .whyuseapp a div span {
-  font-size: 2rem;
+  font-size: var(--size-three);
 }
 .whyuseappblock>div {
   padding: 0.3rem;
@@ -387,7 +398,7 @@ p.genralsliderPara {
 .cta-card {
   padding: 0.625rem 3.75rem 0.625rem 0.5rem;
   background: linear-gradient(90deg, rgba(163, 141, 210, 0.20) 0%, rgba(163, 141, 210, 0.00) 100%);
-  font-size: 2rem;
+  font-size: var(--size-three);
   font-weight: 600;
   border-radius: 0.3rem;
   line-height: 4.375rem;
@@ -477,10 +488,12 @@ footer p {
 }
 
 footer p, footer li, footer a {
-  font-size: 1.125rem;
+  font-size: 1.1rem;
+  line-height: 1.8rem;
   color: #fff;
 }
 footer ul{
+  margin-top: 1.7rem;
   padding: 0;
 }
 footer li{
@@ -496,7 +509,7 @@ footer h6{
   line-height: 1.5rem;
   letter-spacing: 0.01875rem;
   color: #fff;
-  margin-bottom: 2rem;
+  margin-bottom: 0;
 }
 footer form {
   background-color: #fff;
@@ -543,19 +556,19 @@ li.nav-item.dropdown{
 
 @media (min-width: 768px) {
   h2 {
-    font-size: 3.8rem;
-    line-height: 4.8rem;
+    font-size: var(--size-five);
+    line-height: var(--size-seven);
   }
 
   h3 {
-    font-size: 2.6rem;
-    line-height: 3.15rem;
+    font-size: var(--size-four);
+    line-height: var(--size-five);
   }
 
   .mainHeading {
-    font-size: 4rem;
+    font-size: var(--size-five);
     font-weight: 600;
-    line-height: 4.8rem;
+    line-height: var(--size-seven);
   }
 
   .homeCardSectionTwo:nth-child(2) {
@@ -570,13 +583,13 @@ li.nav-item.dropdown{
   }
 
   .slider-bg {
-    padding: 9rem 0;
+    padding: 5rem 0;
   }
 
   .sliderHeading {
-    font-size: 5rem;
+    font-size: var(--size-eight);
     font-weight: 600;
-    line-height: 6.25rem;
+    line-height: var(--size-nine);
   }
   .navbar-expand-lg .navbar-nav .dropdown-menu {
     left: 0;
@@ -587,14 +600,19 @@ li.nav-item.dropdown{
 
 @media (min-width: 1200px){
   .genralSlider {
-    padding: 11rem 0 14rem;
-    background-size: 66%;
+    padding: 5rem 0 7rem;
+    background-size: 63%;
   }
   .genralsliderHeading {
-    max-width: 43rem;
+    max-width: 31rem;
+    font-size: 3rem;
+    line-height: 3.5rem;
   }
   .whyuseappblock>div>div {
     padding: 4rem 1.3rem;
+  }
+  .slider-bg {
+    padding: 9rem 0;
   }
 }
 
@@ -611,13 +629,20 @@ li.nav-item.dropdown{
   .container {
     max-width: 1632px;
   }
-
   .genralSlider {
     padding: 6rem 0 11rem;
     background-size: auto;
   }
-  .genralsliderHeading{
+  .genralsliderHeading {
+    font-size: 3.5rem;
+    line-height: 4rem;
     padding-top: 6rem;
+    max-width: 43rem;
+}
+  .sliderHeading {
+    font-size: var(--size-nine);
+    font-weight: 600;
+    line-height: 5.5rem;
   }
 }
 
